# tinify-rs

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/async/: convert_transform.rs  optimize_image.rs  resize_image.rs
examples/sync/: convert_transform.rs  optimize_image.rs  resize_image.rs
src/: client.rs  convert.rs  error.rs  lib.rs  mock.rs  resize.rs  result.rs  source.rs  tinify.rs  tmp_file.rs  transform.rs
src/async_bin/: client.rs  mod.rs  source.rs  tinify.rs
src/sync/: client.rs  source.rs  tinify.rs
