[package]
name = "tinify-rs"
version = "0.1.0"
edition = "2018"
description = "A Rust client for the Tinify API"
authors = ["The tinify-rs Developers"]
license = "MIT"
readme = "README.md"
keywords = ["compressed-image"]
categories = ["tinify::from_file", "tinify::from_buffer"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
image = "0.23.14"
num-complex = "0.4"

[lib]
name = "tinify_rs"
path = "./src/lib.rs"
doctest = false
