[package]
name = "tinify-rs"
version = "0.2.1"
edition = "2021"
description = "A Rust client for the Tinify API"
authors = ["The tinify-rs Developers"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tinify-rs"
repository = "https://github.com/Danieroner/tinify-rs"
homepage = "https://github.com/Danieroner/tinify-rs"
keywords = [
  "tinify", 
  "tinypng", 
  "tinyjpg", 
  "compress", 
  "optimize", 
]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
dotenv = "0.15.0"

[lib]
name = "tinify_rs"
path = "./src/lib.rs"
doctest = false
