[package]
name = "tinify-rs"
version = "1.4.1"
edition = "2021"
description = "A Rust client for the Tinify API"
authors = ["The tinify-rs Developers"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tinify-rs"
repository = "https://github.com/Danieroner/tinify-rs"
homepage = "https://github.com/Danieroner/tinify-rs"
keywords = ["tinify", "tinypng", "tinyjpg", "compress", "optimize"]
categories = ["compression", "multimedia::images"]

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"], optional = true}
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"] }
serde_derive = "1.0.149"
url = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
imagesize = "0.10.1"
assert_matches = "1.5.0"

[lib]
name = "tinify"
path = "./src/lib.rs"
doctest = false

[features]
async = ["dep:tokio"]
